k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx
  namespace: hello-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: ghcr.io/xtemplate24/hello-nginx@sha256:2ba8bb532ffc096b75514b49edf99d43e4b19d937632319eb1fa6afead1ca4b6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests: { cpu: 10m, memory: 16Mi }
            limits: { cpu: 100m, memory: 64Mi }
          readinessProbe:
            httpGet: { path: /, port: http }
          livenessProbe:
            httpGet: { path: /, port: http }
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
